--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
     "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
     "sortablejs": "^1.7.0"
   },
   "devDependencies": {
