--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "_image",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5",
-    "bootstrap": "3",
-    "jquery": "^3.3.1",
+    "@rails/webpacker": "^4.0.7",
+    "bootstrap": "^4.3.1",
+    "fsevents": "^2.0.7",
+    "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "sortablejs": "^1.7.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.10"
-  }
+    "webpack-dev-server": "^3.7.2"
+  },
+  "version": "1.17.3",
+  "main": "index.js",
+  "repository": "git@github.com:DonatienRolland/-image.git",
+  "author": "DonatienRolland <d.rolland@ymail.com>",
+  "license": "MIT"
 }
