--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sortablejs": "^1.7.0"
   },
   "devDependencies": {
+    "mochawesome": "^4.0.1",
     "webpack-dev-server": "^3.7.2"
   },
   "version": "1.17.3",
