--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "dependencies": {
     "@rails/webpacker": "^4.0.7",
     "bootstrap": "^4.3.1",
-    "fsevents": "^2.0.7",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
+    "popper.js": "^1.15.0",
     "sortablejs": "^1.7.0"
   },
   "devDependencies": {
